<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_btn">Next</string>
    <string name="pre_btn">Prev</string>
    <string name="firstQuestion">This is already first question ! </string>
    <string name="lastQuestion">This is already last question ! </string>

    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <string name="cheat_btn">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this ? </string>
    <string name="show_answer_btn">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_activity_cheat">CheatActivity</string>
</resources>
